[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1", default-features = false }
chrono = "0.4"
config = "~0.13.3"
ethers = { git = "https://github.com/hyperlane-xyz/ethers-rs", branch = "mattie/better-debug-logging" }
eyre = "0.6"
itertools = "0.10"
prometheus = "0.13"
sea-orm = { version = "~0.10.5", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-futures = "0.2"
tracing-subscriber = "0.3"
futures = "0.3"

hyperlane-core = { path = "../../hyperlane-core" }
hyperlane-base = { path = "../../hyperlane-base" }
migration = { path = "migration" }
hex = { path = "../../utils/hex" }

[dev-dependencies]
tokio-test = "0.4"
hyperlane-test = { path = "../../hyperlane-test" }

[features]
default = ["hyperlane-base/color-eyre"]
oneline-errors = ["hyperlane-base/oneline-errors"]
