[package]
name = "scraper"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
config.workspace = true
ethers.workspace = true
eyre.workspace = true
futures.workspace = true
itertools.workspace = true
num-bigint = "0.4"
prometheus.workspace = true
sea-orm = { version = "0.11.1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "with-bigdecimal", "with-time", "macros"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time = "0.3"
tokio = { workspace = true, features = ["rt", "macros"] }
tracing-futures.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

hex = { path = "../../utils/hex" }
hyperlane-base = { path = "../../hyperlane-base" }
hyperlane-core = { path = "../../hyperlane-core" }
migration = { path = "migration" }

[dev-dependencies]
tokio-test = "0.4"
hyperlane-test = { path = "../../hyperlane-test" }

[features]
default = ["color-eyre", "oneline-errors"]
oneline-errors = ["hyperlane-base/oneline-errors"]
color-eyre = ["hyperlane-base/color-eyre"]
