cargo-features = ["workspace-inheritance"]

[package]
name = "scraper"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
config.workspace = true
derive_more.workspace = true
ethers.workspace = true
eyre.workspace = true
futures.workspace = true
itertools.workspace = true
num-bigint.workspace = true
prometheus.workspace = true
sea-orm = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "parking_lot"] }
tracing-futures.workspace = true
tracing.workspace = true

hex = { path = "../../utils/hex" }
hyperlane-base = { path = "../../hyperlane-base" }
hyperlane-core = { path = "../../hyperlane-core", features = ["agent"] }
migration = { path = "migration" }

[dev-dependencies]
tokio-test = "0.4"
hyperlane-test = { path = "../../hyperlane-test" }

[features]
default = ["color-eyre", "oneline-errors"]
oneline-errors = ["hyperlane-base/oneline-errors"]
color-eyre = ["hyperlane-base/color-eyre"]
