[package]
name = "validator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
config = "~0.13.3"
serde = "1.0"
serde_json = { version = "1.0", default-features = false }
ethers = { git = "https://github.com/hyperlane-xyz/ethers-rs", tag = "2023-02-10-01" }
thiserror = "1.0"
async-trait = { version = "0.1", default-features = false }
futures-util = "0.3"
eyre = "0.6"
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-futures = "0.2"
tracing-subscriber = "0.3"
rocksdb = "0.18"
prometheus = "0.13"

hyperlane-core = { path = "../../hyperlane-core" }
hyperlane-base = { path = "../../hyperlane-base" }
hyperlane-ethereum = { path = "../../chains/hyperlane-ethereum" }

[dev-dependencies]
tokio-test = "0.4"
hyperlane-test = { path = "../../hyperlane-test" }

[features]
default = ["hyperlane-base/color-eyre"]
oneline-errors = ["hyperlane-base/oneline-errors"]
