[package]
name = "abacus-ethereum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Main block
serde = "1.0"
serde_json = { version = "1.0", default-features = false }
ethers = {git = "https://github.com/gakonst/ethers-rs", branch = "master", features = ["abigen"]}
ethers-signers = {git = "https://github.com/gakonst/ethers-rs", branch = "master", features = ["aws"]}
ethers-contract = { git = "https://github.com/gakonst/ethers-rs", branch = "master", features=["legacy"] }
async-trait = { version = "0.1", default-features = false }
thiserror = { version = "1.0", default-features = false }
tracing = "0.1"
eyre = "0.6"
num = "0.4"
tokio = "1"
hex = "0.4.3"
rocksdb = "0.18"
tracing-futures = "0.2"
reqwest = "0.11"

abacus-core = { path = "../../abacus-core" }
ethers-prometheus = { path = "../../ethers-prometheus" }


[build-dependencies]
abigen = { path = "../../utils/abigen" }
