cargo-features = ["workspace-inheritance"]

[package]
name = "hyperlane-aptos"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
borsh.workspace = true
jsonrpc-core.workspace = true
num-traits.workspace = true
serde.workspace = true
solana-account-decoder.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
thiserror.workspace = true
tracing-futures.workspace = true
tracing.workspace = true
url.workspace = true
tokio.workspace = true

aptos-sdk.workspace = true
once_cell.workspace = true
bcs.workspace = true
rand.workspace = true
serde_json.workspace = true
hex.workspace = true

hyperlane-core = { path = "../../hyperlane-core", features = ["solana"] }
